changed the templete to add root and power

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -50,10 +50,12 @@
           class="block w-full rounded-md border-gray-300 shadow-sm 
                  focus:border-blue-500 focus:ring-blue-500 py-2"
         >
-          <option value="addition">Addition</option>
-          <option value="subtraction">Subtraction</option>
-          <option value="multiplication">Multiplication</option>
-          <option value="division">Division</option>
+            <option value="addition">Addition</option>
+            <option value="subtraction">Subtraction</option>
+            <option value="multiplication">Multiplication</option>
+            <option value="division">Division</option>
+            <option value="power">Power</option>
+            <option value="root">Root</option>
         </select>
       </div>
       <!-- Inputs -->
