--- a/templates/edit_calculation.html
+++ b/templates/edit_calculation.html
@@ -330,6 +330,12 @@ document.addEventListener('DOMContentLoaded', async () => {
       case 'division':
         operator = '÷';
         break;
+      case 'power':
+        operator = '^';
+        break;
+      case 'root':
+        operator = '√';
+        break;
       default:
         operator = '?';
     }
