added symbols for root and power

--- a/templates/view_calculation.html
+++ b/templates/view_calculation.html
@@ -211,6 +211,12 @@ document.addEventListener('DOMContentLoaded', async () => {
       case 'division':
         operator = '÷';
         break;
+      case 'power':
+        operator = '^';
+        break;
+      case 'root':
+        operator = '√';
+        break;
       default:
         operator = '?';
     }
